# poe2-filters-manager

./: .env  .gitignore  README.md  bun.lockb  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  configuration.json  release.yml  virus-total.yml
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
~/.tauri/: myapp.key  myapp.key.pub
