[package]
name = "poe2-filters-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "poe2_filters_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip-extract = "0.2"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-http = "2"
tauri-plugin-persisted-scope = "2.0.0"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-store = "2.0.0"
tauri-plugin-upload = "2.0.0"

# Needed to unzip
tauri = { version = "2.1.1" }
serde = "1.0"
thiserror = "2.0.6"
zip-extract = "0.2.1"
